<resources>
    <string name="app_name">Homework</string>
    <string name="деление">/</string>
    <string name="процент">%</string>
    <string name="плюсминус">+/-</string>
    <string name="очистить">AC</string>
    <string name="_0">0</string>
    <string name="точка">.</string>
    <string name="ровно">=</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="плюс">+</string>
    <string name="минус">-</string>
    <string name="умножить">x</string>
    <string name="ДЕЛЕНИЕ">÷</string>
</resources>